idigitaltimes.com (archived on 2013-12-22)
{
  "alexa_rank": 14514,
  "analysis_subcorpus": true,
  "categories": "entertainment;games",
  "char_count": 46768,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.9,
  "homepage_snapshot_redirected_domain": "idigitaltimes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130929065050id_/http://www.idigitaltimes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130929065050id_/http%3A//idigitaltimes.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "idigitaltimes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222075359id_/http%3A//www.idigitaltimes.com/aboutus/privacy.htm",
  "policy_title": "Digital Technology News, Latest Technology News",
  "policy_url": "idigitaltimes.com/aboutus/privacy.htm",
  "sha1": "1ea1828634bf83568da6fa8f89cfba1bcba8ff9c",
  "simhash": 4168315073465366016,
  "simhash_updated": true,
  "site_hostname": "idigitaltimes.com",
  "site_url": "http://idigitaltimes.com",
  "smog": 18.32,
  "strict_updated": true,
  "timestamp": "20131222075359",
  "word_count": 7450,
  "year": 2013
}

--- a/i/id/idi/idigitaltimes.com.html
+++ b/i/id/idi/idigitaltimes.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the idigitaltimes.com privacy policy that was archived on 2013-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130617235442id_/http%3A//www.idigitaltimes.com/aboutus/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the idigitaltimes.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222075359id_/http%3A//www.idigitaltimes.com/aboutus/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Digital Technology News, Latest Technology News</title>
+<script type="text/javascript" async="" src="//statse.webtrendslive.com/dcsc97cgk6bv0hk3d4tend13s_4i6r/wtid.js?callback=Webtrends.dcss.dcsobj_0.dcsGetIdCallback"></script><script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="/js/webtrends.min.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script><title>Digital Technology News, Latest Technology News</title>
 <meta name="Author" content="iDigitalTimes">
 <meta name="Copyright" content="2013 International Digital Times">
 <meta name="Subject" content="designntrend.com">
@@ -28,7 +28,7 @@ section .hd .title {padding-bottom:0;}
 </style>
 <![endif]-->
 <link type="text/css" rel="stylesheet" href="http://cdn.idigitaltimes.com/html/css/slider.css">
-<script type="text/javascript" async="" src="//statse.webtrendslive.com/dcsc97cgk6bv0hk3d4tend13s_4i6r/wtid.js?callback=Webtrends.dcss.dcsobj_0.dcsGetIdCallback"></script><script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="/js/webtrends.min.js"></script><script type="text/javascript" src="http://cdn.idigitaltimes.com/js/jquery.js"></script>
+<script type="text/javascript" src="http://cdn.idigitaltimes.com/js/jquery.js"></script>
 <script type="text/javascript" src="http://cdn.idigitaltimes.com/js/common.js"></script>
 <script type="text/javascript" src="http://cdn.idigitaltimes.com/js/plugin/thickbox/thickbox.js"></script>
 <link rel="stylesheet" type="text/css" href="http://cdn.idigitaltimes.com/js/plugin/thickbox/thickbox.css" media="screen">
@@ -38,7 +38,7 @@ section .hd .title {padding-bottom:0;}
 <script type="text/javascript" src="http://cdn.idigitaltimes.com/js/jquery.rating.js"></script>
 <script language="JavaScript">
 <!--
-OAS_url = 'http://oascentral.ibtimes.com/RealMedia/ads/';OAS_sitepage = 'idigitaltimes/default';OAS_listpos = 'Top,Right1,Right2';OAS_query = '';
+OAS_url = 'http://oascentral.ibtimes.com/RealMedia/ads/';OAS_sitepage = 'idigitaltimes/default';OAS_listpos = 'Top,Top1,Right1,Right2,Right3';OAS_query = '';
 
 var intrusiveTimer = getCookie('intrusiveTimer');
 var intrusiveDate = new Date();
@@ -73,6 +73,8 @@ if(OAS_version >= 11) document.write('<SCR' + 'IPT LANGUAGE=JavaScript1.1 SRC="'
 document.write('');function OAS_AD(pos) {if(OAS_version >= 11) OAS_RICH(pos);else OAS_NORMAL(pos);}
 //-->
 </script>
+
+
 <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 <style>
 #soea_areasr {border: 0 solid #7F7F7F;right: 50%;margin-right: 520px;margin-top: 296px;position: absolute;top: 0;width:160px;height:600px;color:#fff;text-align:center;z-index: 999999;}
@@ -85,9 +87,9 @@ document.write('');function OAS_AD(pos) {if(OAS_version >= 11) OAS_RICH(pos);els
 <input type="hidden" id="keywordshome" value="iDigitalTimes, gadgets, software, gaming, social media, photography, online privacy, new technology, reviews">
 <input type="hidden" id="urlhome" value="http://www.idigitaltimes.com/aboutus/privacy.htm">	<!--ad728 start-->
 <div class="topad"> <div>
-<!-- start ad filename : article-top-728.htm -->
-<script type="text/javascript">OAS_AD('Top');</script>
-<!-- end ad filename : article-top-728.htm -->
+  <!-- start ad filename : article-top-728.htm -->
+  <script type="text/javascript">OAS_AD('Top');</script>
+  <!-- end ad filename : article-top-728.htm -->
 </div>
  </div>
 <!--ad728 end-->
@@ -311,9 +313,9 @@ document.write('');function OAS_AD(pos) {if(OAS_version >= 11) OAS_RICH(pos);els
 <!--container end--> 	
 <!--ad728 start-->
 <div class="ftrad"> <center>
-<!-- start ad filename : article-bottom-728.htm -->
-<script type="text/javascript">OAS_AD('Top1');</script>
-<!-- end ad filename : article-bottom-728.htm -->
+  <!-- start ad filename : article-bottom-728.htm -->
+  <script type="text/javascript">OAS_AD('Top1');</script>
+  <!-- end ad filename : article-bottom-728.htm -->
 </center>
  </div>
 <!--ad728 end-->
@@ -351,6 +353,7 @@ document.write('');function OAS_AD(pos) {if(OAS_version >= 11) OAS_RICH(pos);els
         <li><a href="/aboutus/contactus.htm">Contact us</a></li>
         <li><a href="/aboutus/privacy.htm">Privacy Policy</a></li>
         <li><a href="/aboutus/terms.htm">Terms of Use</a></li>
+        <li><a href="/aboutus/jobs.htm">Jobs</a></li>
       </ul>
       <div class="clear"></div>
     </div>
@@ -418,6 +421,7 @@ window.webtrendsAsyncInit=function(){
             //hm:{src:"//s.webtrends.com/js/webtrends.hm.js"}
         }
     });
+    dcs.DCSext.w_writer = " ";
     dcs.track();
 };
 (function(){
@@ -446,6 +450,7 @@ clicky_site_ids.push(66605991);
     /** CONFIGURATION START **/
     _sf_async_config.uid = 23870;
     _sf_async_config.domain = 'idigitaltimes.com';
+    _sf_async_config.authors = ' ';
     /** CONFIGURATION END **/
     (function(){
       function loadChartbeat() {
@@ -493,9 +498,7 @@ _comscore.push({ c1: "2", c2: "7922264" });
 <noscript><img src="http://b.scorecardresearch.com/p?c1=2&c2=7922264&cv=2.0&cj=1" /></noscript>
 <!-- End of comScore Code -->
 
-<div id="fb-root"><script src="https://connect.facebook.net/en_US/all.js" async=""></script></div><script type="text/javascript">window.fbAsyncInit=function(){FB.init({appId:'140842089267946',status:true,cookie:true,xfbml:true,channelUrl:'http://www.idigitaltimes.com/channel.html'});};(function(){var e=document.createElement('script');e.src=document.location.protocol+'//connect.facebook.net/en_US/all.js';e.async=true;document.getElementById('fb-root').appendChild(e);}());</script>  
+<div id="fb-root"><script src="https://connect.facebook.net/en_US/all.js" async=""></script></div><script type="text/javascript">window.fbAsyncInit=function(){FB.init({appId:'140842089267946',status:true,cookie:true,xfbml:true,channelUrl:'http://www.idigitaltimes.com/channel.html'});};(function(){var e=document.createElement('script');e.src=document.location.protocol+'//connect.facebook.net/en_US/all.js';e.async=true;document.getElementById('fb-root').appendChild(e);}());</script>		
+<script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","f118e6cce8","1894871","ZlNUMEdSWUsAVkReW18ZYxZcHFZaDkBEQkceRkQNQ1JUQU9dRFo=",0,16,new Date().getTime(),"","","","",""]);</script>
 
-		
-
-
-<script language="javascript" type="text/javascript" src="https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/js/chartbeat.js"></script></body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script><script language="javascript" type="text/javascript" src="https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/js/chartbeat.js"></script></body></html>
