--- a/t/th/the/thehardfucked.com.html
+++ b/t/th/the/thehardfucked.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thehardfucked.com privacy policy that was archived on 2013-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130623021303id_/http%3A//thehardfucked.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thehardfucked.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222080323id_/http%3A//www.thehardfucked.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -119,7 +119,7 @@ THEHARDFUCKED.COM website and services are directed to adults. We do NOT allow c
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://ads.adgoto.com/adjs.php?n=502903050&amp;what=zone:276&amp;exclude=,"></script><noscript><a href='http://ads.adgoto.com/adclick.php?n=aaaa5df9' target='_blank'><img src='http://ads.adgoto.com/adview.php?what=zone:276&amp;n=aaaa5df9' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://ads.adgoto.com/adjs.php?n=846046981&amp;what=zone:276&amp;exclude=,"></script><noscript><a href='http://ads.adgoto.com/adclick.php?n=aaaa5df9' target='_blank'><img src='http://ads.adgoto.com/adview.php?what=zone:276&amp;n=aaaa5df9' border='0' alt=''></a></noscript>
 <script type="text/javascript" src="http://syndication.exoclick.com/splash.php?cat=104&amp;idsite=107104&amp;idzone=215834&amp;login=adgoto&amp;type=3"></script>
 <script language="JavaScript">
 function pageClick(e) { exoclick_popunder(); }
@@ -127,4 +127,5 @@ var IE = document.all?true:false;
 if (!IE) document.captureEvents(Event.MOUSECLICK);
 document.onclick=pageClick;
 </script>
-</body></html>
+
+<!-- Cached! - December 22 2013 02:48:54. --></body></html>
