eye4software.com (archived on 2013-12-22)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 4468,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.69,
  "homepage_snapshot_redirected_domain": "eye4software.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130922170437id_/http://www.eye4software.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130922170437id_/http%3A//eye4software.com",
  "interval": "2013_B",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "eye4software.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222082804id_/http%3A//www.eye4software.com/privacy",
  "policy_title": "GPS Software - Eye4Software B.V. - Privacy Policy",
  "policy_url": "eye4software.com/privacy",
  "sha1": "6cddaa34977f203e60d89893c951cc0c11fd1772",
  "simhash": 10219591261114541277,
  "simhash_updated": false,
  "site_hostname": "eye4software.com",
  "site_url": "http://eye4software.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131222082804",
  "word_count": 684,
  "year": 2013
}

--- a/e/ey/eye/eye4software.com.html
+++ b/e/ey/eye/eye4software.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eye4software.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622143133id_/http%3A//www.eye4software.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eye4software.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222082804id_/http%3A//www.eye4software.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 <meta name="google-site-verification" content="wDUgXHOUx8aYhHKTpYh-d_TvGPeBH71gvULOoxqXUM0">
@@ -135,10 +135,13 @@ popupWindow.focus()
 <div class="boxborder">
  <div class="box">
   <div class="menu">
-   <h2><span>Latest News</span></h2>
+   <h2><span>Social Media</span></h2>
    <div class="wrapper">
    <p>
-   <a href="http://www.twitter.com/eye4software" target="_blank"><img src="/images/twitter.png" border="0"></a>
+   <a href="http://www.twitter.com/eye4software" target="_blank"><img src="/images/twitter.png" border="0"></a>&nbsp;&nbsp;
+   <a href="http://www.facebook.com/eye4software" target="_blank"><img src="/images/facebook.png" border="0"></a>&nbsp;&nbsp;
+   <a href="http://www.linkedin.com/company/357638" target="_blank"><img src="/images/linkedin.png" border="0"></a>&nbsp;&nbsp;
+   <a href="https://www.youtube.com/channel/UCUKh_Rvg4CCgEEzlgijeTYA" target="_blank"><img src="/images/youtube.png" border="0"></a>
    </p>
    </div>
   </div>
