--- a/i/in/inb/inboxpounds.co.uk.html
+++ b/i/in/inb/inboxpounds.co.uk.html
@@ -1,26 +1,26 @@
-<!--The following is the downloaded HTML source of the inboxpounds.co.uk privacy policy that was archived on 2013-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130529215016id_/http%3A//www.inboxpounds.co.uk/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inboxpounds.co.uk privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222112343id_/http%3A//www.inboxpounds.co.uk/pages/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/" xml:lang="en" lang="en"><head>
+<!DOCTYPE html><html xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/" xml:lang="en" lang="en" class="no-js"><head>
 	<title>Earn Cash Online: Privacy Policy - InboxPounds</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="Read the privacy policy of InboxPounds, the company that helps you earn cash for taking online surveys, reading email, shopping &amp; more.">
-		<meta name="keywords" content="inbox, pounds, cash, e-mail, surveys, games">
-		<!-- pageLocation = pages/display/privacy -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="shortcut icon" href="/favicon.ico">
+		<meta name="description" content="Read the privacy policy of InboxPounds, the company that helps you earn cash for taking online surveys, reading email, shopping &amp; more.">
+			<meta name="keywords" content="inbox, pounds, cash, e-mail, surveys, games">
+					<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<link rel="shortcut icon" href="/favicon.ico">
 	
 	<meta property="og:title" content="InboxPounds® - the free online rewards club that pays cash.">
-
-<link rel="stylesheet" type="text/css" href="/cssjs/css/core.css/nav.css/InboxPounds_nd.css/pages.css?v=1369761993">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Nunito:300">
+<link rel="stylesheet" type="text/css" href="/cssjs/css/core.css/nav.css/InboxPounds_nd.css/featured_deals.css/offer_detail_pop.css/pages.css?v=1387306907">
 	<!--[if IE 6]>
-<link rel="stylesheet" type="text/css" href="/cssjs/css/ie6.css?v=1369761993" />
+<link rel="stylesheet" type="text/css" href="/cssjs/css/ie6.css?v=1387306907" />
 	<![endif]-->
 	<!--[if IE 7]>
-<link rel="stylesheet" type="text/css" href="/cssjs/css/ie7.css?v=1369761993" />
+<link rel="stylesheet" type="text/css" href="/cssjs/css/ie7.css?v=1387306907" />
 	<![endif]-->
 
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&amp;ns=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/cssjs/js/modernizr.js?v=1387306915"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 <script>
 window.jQuery || document.write("<script src='/js/jQuery/jquery.js'><\/script>");
 </script><script src="/js/jQuery/jquery.js"></script>
@@ -33,7 +33,7 @@ window.jQuery || document.write("<script src='/js/jQuery/jquery.js'><\/script>")
 
 <div class="wrapper">
 		<div class="facebook-tooltip-redesign">
-		Post to Facebook, get 10% of their qualified earnings when your friends join InboxPounds
+		Post to Facebook and receive 10% of your friends' qualified earnings when they join InboxPounds!
 	</div>
 	
 	<div>
@@ -66,7 +66,7 @@ window.jQuery || document.write("<script src='/js/jQuery/jquery.js'><\/script>")
 									<span class="greyBoxFormLabel">Email:</span>
 								</div>
 								<div id="headerRightEmailBox">
-									<input name="data[Member][username]" size="15" maxlength="50" tabindex="1" type="text" id="MemberUsername">								</div>
+									<input name="data[Member][username]" size="15" maxlength="70" tabindex="1" type="text" id="MemberUsername">								</div>
 							</div>
 							<div id="headerRightPasswordContainer">
 								<div id="headerRightPassword">
@@ -103,18 +103,103 @@ window.jQuery || document.write("<script src='/js/jQuery/jquery.js'><\/script>")
 	<div id="headerGrayBar">
 	</div></div><!-- END WRAPPER2 -->
 
+
 <!-- Navigation -->
+<style type="text/css">
+.colorTabs li a.home{
+	width:90px;
+}
+.offers_menu {
+	min-width: 105px;
+}
+.colorTabs li a.offers{
+	width:105px;
+}
+.colorTabs li a.surveys{
+	width:105px;
+}
+.colorTabs li a.easycash{
+	width:105px;
+}
+.colorTabs li a.search{
+	width:105px;
+}
+.colorTabs li a.bingo{
+	width:105px;
+}
+.colorTabs li a.tasks{
+	width:105px;
+}
+.colorTabs li a.videos{
+	width:105px;
+}
+.colorTabs li a.refer{
+	width:125px;
+}
+.account_menu {
+	min-width: 105px;
+}
+.colorTabs li a.account{
+	width:105px;
+}
+</style>
 
+<div class="nav" style="width:950px; height:30px;">
 
-<div id="mainContentParent" style="background-color: #FFFFFF;">
+<div id="topNavMenu" class="colorTabs">
+<ul>
+	<li id="home_li"><a href="/" class="top_menu home"><div id="home_li_link_div" class="home">Home</div></a></li>
+	<li id="offers_li"><a href="/offers" class="top_menu offers" rel="offers_dropdown"><div id="offers_li_link_div" class="offers">Offers</div></a></li>
+	<li id="surveys_li"><a href="/surveys" class="top_menu surveys"><div id="surveys_li_link_div" class="surveys">Surveys</div></a></li>
+	<li id="easycash_li"><a href="/cash_freebies" class="top_menu easycash"><div id="easycash_li_link_div" class="easycash">Easy Cash</div></a></li>
+	<li id="search_li"><a href="/search" class="top_menu search"><div id="search_li_link_div" class="search">Search</div></a></li>
+	<li id="bingo_li"><a href="/bingo" class="top_menu bingo"><div id="bingo_li_link_div" class="bingo">Bingo</div></a></li>
+	<li id="tasks_li"><a href="/tasks" class="top_menu tasks"><div id="tasks_li_link_div" class="tasks">Tasks</div></a></li>
+	<li id="videos_li"><a href="/videos" class="top_menu videos"><div id="videos_li_link_div" class="videos">Videos</div></a></li>
+	<li id="refer_li"><a href="/members/refer" class="top_menu refer"><div id="refer_li_link_div" class="refer">Refer Friends</div></a></li>
+</ul>
+
+<div id="offers_dropdown" class="dropmenudiv_a offers_menu">
+	<ul>
+		<li><a href="/offers/index/2/100-FREE-Offers" class="noboard_1Col">100% FREE Offers</a></li>
+		<li><a href="/offers/All-Offers" class="noboard_1Col">All Offers</a></li>
+		<li><a href="/offers/index/3/Trial-Offers" class="noboard_1Col">Trial Offers</a></li>
+		<li><a href="/offers/index/4/Survey-Offers" class="noboard_1Col">Survey Offers</a></li>
+		<li><a href="/offers/index/47/Repeat-Rewards" class="noboard_1Col">Repeat Rewards</a></li>
+		<li class="noboard_1Col"><a></a></li>
+		<li><a href="/offers/index/40/As-Seen-on-TV" class="noboard_1Col">As Seen on TV</a> </li>
+		<li><a href="/offers/index/5/Books" class="noboard_1Col">Books</a> </li>
+		<li><a href="/offers/index/42/Entertainment" class="noboard_2Col licol_first">Entertainment</a> </li>
+		<li><a href="/offers/index/31/Flowers-Gift-Ideas" class="noboard_2Col">Flowers &amp; Gift Ideas</a> </li>
+		<li><a href="/offers/index/39/Food-Beverage" class="noboard_2Col">Food &amp; Beverage</a> </li>
+		<li><a href="/offers/index/18/Gaming" class="noboard_2Col">Gaming</a> </li>
+		<li><a href="/offers/index/8/Health-Beauty" class="noboard_2Col">Health &amp; Beauty</a> </li>
+		<li><a href="/offers/index/41/Holiday" class="noboard_2Col">Holiday</a> </li>
+		<li><a href="/offers/index/33/Home-Garden" class="noboard_2Col">Home &amp; Garden</a> </li>
+		<li><a href="/offers/index/9/Home-Business" class="noboard_2Col">Home Business</a> </li>
+		<li><a href="/offers/index/46/Magazines" class="noboard_3Col licol_first">Magazines</a> </li>
+		<li><a href="/offers/index/11/Membership-Clubs" class="noboard_3Col">Membership Clubs</a> </li>
+		<li><a href="/offers/index/12/Miscellaneous" class="noboard_3Col">Miscellaneous</a> </li>
+		<li><a href="/offers/index/16/Mobile" class="noboard_3Col">Mobile</a> </li>
+		<li><a href="/offers/index/14/Online-Services" class="noboard_3Col">Online Services</a> </li>
+		<li><a href="/offers/index/37/Travel" class="noboard_3Col">Travel</a> </li>
+		<li><a href="/offers/index/22/Weight-Loss" class="noboard_3Col">Weight Loss</a> </li>
+	</ul>
+</div>
+
+</div>	
+</div>
+
+ 
+<div id="mainContentParent">
 
 	<table border="0" cellpadding="0" cellspacing="0">
 		<tbody><tr>
-			<td id="mainContent" valign="top">	
-				<div id="mainContentDiv">
-					<br>
-					<div>
-						<div id="masthead" class="channel">
+							<td id="mainContent" valign="top">	
+					<div id="mainContentDiv">
+						<br>
+						<div>
+							<div id="masthead" class="channel">
 	<h1>Privacy and Cookie Policy</h1>
 </div>
 
@@ -442,22 +527,24 @@ window.jQuery || document.write("<script src='/js/jQuery/jquery.js'><\/script>")
 	</ol>
 </div>
 	
+						</div>
+						<br>
 					</div>
-					<br>
-				</div><!--END MAIN CONTENT LEFT DIV -->
-			</td>
-		</tr>
+				</td>
+					</tr>
 	</tbody></table>
 
 </div><!--END mainContentParent -->
 
+   
 
 <div class="contwrap" style="border: 0px solid #ff0000; margin:0 auto; width:950px; overflow: auto; background-color:#fff;">
 
 	
 	<div id="mostPopularOffers_rs">
 		<h3>Most Popular Offers</h3>
-							<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
+							
+				<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
 				<div class="enclosed offers" style="width:225px;">
 					<h2>General Profile Survey </h2>
 					<a href="/offers/go/17" class="offerDescription" target="_blank">
@@ -467,37 +554,40 @@ window.jQuery || document.write("<script src='/js/jQuery/jquery.js'><\/script>")
 					<a href="/offers/go/17" class="offerButton" target="_blank">
 						earn £0.40					</a>
 				</div>          
-<div class="impressionbatch" style="display:none">2,2,4</div>							<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
+<div class="impressionbatch" style="display:none">2,2,4</div>											
+				<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
 				<div class="enclosed offers" style="width:225px;">
 					<h2>LoveFilm </h2>
 					<a href="/offers/go/151" class="offerDescription" target="_blank">
-						<img src="http://www.inboxpounds.co.uk/graphics/advertisers/offers/LoveFilm.gif" alt="LoveFilm" border="0" width="120" height="60">
-						<span class="description">LoveFilm is Britain's biggest choice of entertainment! Watch movies and TV shows instantly online, rent DVDs, Blu-rays, and games by post. Stream on your TV, PS3, Xbox 360, laptop,and iPad. No late fees or long term contracts. 14-day Free Trial.</span>
+						<img src="http://www.inboxpounds.co.uk/graphics/advertisers/offers/Lovefilm120x60.jpg" alt="LoveFilm" border="0" width="120" height="60">
+						<span class="description">LoveFilm is Britain's biggest choice of entertainment! Watch movies and TV shows instantly online, rent DVDs, Blu-rays, and games by post. Stream on your TV, PS3, Xbox 360, laptop,and iPad. No late fees or long term contracts. 30-day Free Trial.</span>
 					</a>
 					<a href="/offers/go/151" class="offerButton" target="_blank">
 						earn £4.00					</a>
 				</div>          
-<div class="impressionbatch" style="display:none">31,2,17</div>							<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
+<div class="impressionbatch" style="display:none">31,2,17</div>											
+				<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
 				<div class="enclosed offers" style="width:225px;">
-					<h2>Valued Opinions </h2>
-					<a href="/offers/go/664" class="offerDescription" target="_blank">
-						<img src="http://www.ftjcfx.com/image-5598648-10886002" alt="Valued Opinions" border="0" width="120" height="60">
-						<span class="description">Earn up to £5.00 for each completed Survey when you join Valued Opinions. Sign up for FREE, activate your account and you’ll automatically be entered to win a new Samsung Galaxy Tablet! Give your Opinion. Get Rewarded. Join Today!</span>
+					<h2>Global Test Market </h2>
+					<a href="/offers/go/621" class="offerDescription" target="_blank">
+						<img src="http://www.inboxpounds.co.uk/graphics/advertisers/offers/GTMUKENSILHOUETTE-120x60.gif" alt="Global Test Market" border="0" width="120" height="60">
+						<span class="description">Join GlobalTestMarket and get rewarded for taking online paid surveys. Directly influence top companies around the world. Join now to start receiving your surveys! Signup and take your first survey to receive credit.</span>
 					</a>
-					<a href="/offers/go/664" class="offerButton" target="_blank">
+					<a href="/offers/go/621" class="offerButton" target="_blank">
 						earn £0.50					</a>
 				</div>          
-<div class="impressionbatch" style="display:none">97,2,115</div>							<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
+<div class="impressionbatch" style="display:none">736,2,793</div>											
+				<!-- this element is used to display popular offers - Jeremy Wegener 9.08.10 -->
 				<div class="enclosed offers" style="width:225px;">
-					<h2>Tickbox </h2>
-					<a href="/offers/go/492" class="offerDescription" target="_blank">
-						<img src="http://www.inboxpounds.co.uk/graphics/advertisers/offers/Tickbox120x60.gif" alt="Tickbox" border="0" width="120" height="60">
-						<span class="description">Sign-up for Tickbox to take part in quick and easy surveys. Win prizes and share your opinion. Must sign-up AND take your first survey to receive credit.</span>
+					<h2>Harris Poll Online </h2>
+					<a href="/offers/go/165" class="offerDescription" target="_blank">
+						<img src="http://www.inboxpounds.co.uk/graphics/advertisers/offers/HPOL_120x60.gif" alt="Harris Poll Online" border="0" width="120" height="60">
+						<span class="description">Become a member of the Harris Poll Online and you will have the opportunity to influence important decision makers in government, corporations, and non-profit organisations. Your responses can make a difference - Join today!</span>
 					</a>
-					<a href="/offers/go/492" class="offerButton" target="_blank">
-						earn £0.10					</a>
+					<a href="/offers/go/165" class="offerButton" target="_blank">
+						earn £1.00					</a>
 				</div>          
-<div class="impressionbatch" style="display:none">132,2,152</div>						<div style="clear:both;"> </div>
+<div class="impressionbatch" style="display:none">38,2,24</div>										<div style="clear:both;"> </div>
 	</div>
 
 
@@ -506,43 +596,53 @@ window.jQuery || document.write("<script src='/js/jQuery/jquery.js'><\/script>")
 
 
 </div>
-<div class="footer"><ul id="nav-footer_rs">
+<div class="footer">
+	<!--green bar -->
+<ul id="nav-footer_rs">
 	<li class="first"><a href="/">Home</a></li>
 	<li><a href="http://inboxdollars.com/corporate/about">About Us</a></li>
 	<li><a href="http://inboxdollars.com/corporate/advertisers">Advertisers</a></li>
 	<li><a href="http://inboxdollars.com/corporate/affiliate">Affiliate Programme</a></li>
 	<li><a href="/pages/faq">F.A.Q.</a></li>
+	<li><a href="/club-guide">Club Guide</a></li>
 	<li><a href="http://server.iad.liveperson.net/hc/s-20537474/cmd/kbresource/kb-3344162036168799558/front_page!PAGETYPE?category=67" target="_blank">Contact Us</a></li>
 	<li><a href="/pages/terms">Terms of Membership</a></li>
 	<li><a href="/pages/privacy">Privacy and Cookie Policy</a></li>
 	<li class="last"><a href="http://inboxdollars.com/corporate/careers">Careers</a></li>
 </ul>
 </div>
-<!-- Copyright notice -->
 <div id="copyright">
 	© Copyright 2011–2013 &nbsp;&nbsp;&nbsp; InboxPounds® &nbsp;&nbsp;&nbsp; All Rights Reserved<br>
 	InboxPounds® is operated by <a href="http://inboxdollars.com/corporate" target="_blank">InboxDollars</a>
 </div>
-
 <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-696666-8']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-696666-16']);
+	_gaq.push(['_trackPageview']);
+	
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
 
 </script>
 <!-- ws01 -->
 
-<script language="javascript" type="text/javascript" src="http://ttl30d.images.infospace.com.edgesuite.net/search/lib/ptwidget-1.0.js"></script>
+
+<script type="text/javascript" src="/cssjs/js/accordscript.js/dropdowntabs.js/recent_earnings.js/search_tab.js/json2.js/impression_botcher.js/hide_n_show.js/ibox2.js/joinNow.js/dom_ready.js/featured_deals.js/offer_detail_pop.js/logo_hover.js/nav_menu_init.js?member_id=0&amp;page_id=1&amp;selectedNavItemIndex=auto&amp;v=1387306915"></script>
 
 
-<script type="text/javascript" src="/cssjs/js/accordscript.js/dropdowntabs.js/recent_earnings.js/search_tab.js/json2.js/impression_botcher.js/hide_n_show.js/ibox2.js/joinNow.js/logo_hover.js/nav_menu_init.js?member_id=&amp;page_id=1&amp;selectedNavItemIndex=auto&amp;v=1369762008"></script>
 
+<script type="text/javascript">
+//<![CDATA[
+(function() {
+var _analytics_scr = document.createElement('script');
+_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&ns=1';
+var _analytics_elem = document.getElementsByTagName('script')[0]; _analytics_elem.parentNode.insertBefore(_analytics_scr, _analytics_elem);
+})();
+// ]]>
+</script>
 
 </body></html>
