evasi0n.com (archived on 2013-12-22)
{
  "alexa_rank": 32586,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2211,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.62,
  "homepage_snapshot_redirected_domain": "evasi0n.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131113215119id_/http://evasi0n.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131113215119id_/http%3A//evasi0n.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "evasi0n.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222131243id_/http%3A//evasi0n.com/privacy.html",
  "policy_title": "evasi0n iOS 7.x Jailbreak - official website of the evad3rs",
  "policy_url": "evasi0n.com/privacy.html",
  "sha1": "391a08b8bf42f9aeb1fe2e9a6564c4f4628f4f3c",
  "simhash": 13370719309440732139,
  "simhash_updated": false,
  "site_hostname": "evasi0n.com",
  "site_url": "http://evasi0n.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131222131243",
  "word_count": 362,
  "year": 2013
}

--- a/e/ev/eva/evasi0n.com.html
+++ b/e/ev/eva/evasi0n.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the evasi0n.com privacy policy that was archived on 2013-04-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130420204030id_/http%3A//evasi0n.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the evasi0n.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222131243id_/http%3A//evasi0n.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <link rel="stylesheet" href="css/main.css" type="text/css">
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-<title>evasi0n iOS 6.x Jailbreak - official website of the evad3rs</title>
-<meta name="description" content="Offical website of evasi0n iOS 6.x jailbreak by the evad3rs">
-<meta name="keywords" content="evasi0n,evad3rs,jailbreak,iOS 6,iOS 6.1,cydia">
+<title>evasi0n iOS 7.x Jailbreak - official website of the evad3rs</title>
+<meta name="description" content="Offical website of evasi0n iOS 7.0-7.0.4 jailbreak by the evad3rs">
+<meta name="keywords" content="evasi0n,evasi0n7,evad3rs,jailbreak,iOS 7,cydia">
 <meta name="author" content="evad3rs">
 </head>
 <body>
@@ -40,7 +40,7 @@
 <a href="http://evasi0n.com" title="Home"><img src="images/evasi0n_header_2.png" width="118" height="42" alt="evasi0n logo"></a>
 </div>
 <div id="main">
-<h1>evasi0n - iOS 6.x Jailbreak</h1>
+<h1>evasi0n7 - iOS 7.x Jailbreak</h1>
 <hr>
 <h2>Privacy Policy</h2>
 <h3>Your Privacy</h3>
