--- a/c/ch/chi/china-telecommunications.com.html
+++ b/c/ch/chi/china-telecommunications.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the china-telecommunications.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620090152id_/http%3A//www.china-telecommunications.com/static/privacy_policy-33.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the china-telecommunications.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222151058id_/http%3A//www.china-telecommunications.com/static/privacy_policy-33.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
     <meta http-equiv="X-UA-Compatible" content="IE=7">
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="china-telecommunications.com privacy policy - China telecommunications manufacturers, telecommunications suppliers and telecommunications wholesalers.">
     <title>china-telecommunications.com privacy policy</title>
-<link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/base_pak_15c8a4f.css?t=5f0" media="all"> <link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/showroo_left_pak_15c8a4f.css?t=5f0" media="all"> <link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/showroo_right_pak_15c8a4f.css?t=5f0" media="all"> <link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/help_pak_15c8a4f.css?t=5f0" media="all"> <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/res/china-telecommunications.com/2011-11-23/home/scripts/jquery.js?t=5f0"></script><script type="text/javascript" src="/res/china-telecommunications.com/2011-11-23/home/scripts/over.js?t=5f0"></script><!--[if IE 6]>
+<link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/base_pak_1608d72.css?t=54d" media="all"> <link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/showroo_left_pak_1608d72.css?t=54d" media="all"> <link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/showroo_right_pak_1608d72.css?t=54d" media="all"> <link type="text/css" rel="stylesheet" href="/res/china-telecommunications.com/2011-11-23/home/css/help_pak_1608d72.css?t=54d" media="all"> <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/res/china-telecommunications.com/2011-11-23/home/scripts/jquery.js?t=54c"></script><script type="text/javascript" src="/res/china-telecommunications.com/2011-11-23/home/scripts/over.js?t=54e"></script><!--[if IE 6]>
 		<script type="text/javascript" src="/res/china-telecommunications.com/2011-11-23/home/scripts/pngAlaph.js"></script>
 		<script>
 			DD_belatedPNG.fix('#projector_bg,img');
@@ -105,7 +105,7 @@
             <div class="Q10">
                 <div class="c9">
                     <ul>
-                        <li><a href="/static_cn/33.html">Privacy Policy</a></li>
+                        <li><a href="/static/-33.html">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="R57">
