uppfly.com (archived on 2013-12-22)
{
  "alexa_rank": 253798,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 2087,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.47,
  "homepage_snapshot_redirected_domain": "uppfly.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131023221524id_/http://www.uppfly.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131023221524id_/http%3A//uppfly.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "uppfly.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222151336id_/http%3A//www.uppfly.com/privacy_policy.php",
  "policy_title": "Uppfly Privacy Policy \u2013 Point to Mark While Submitting Bookmarking",
  "policy_url": "uppfly.com/privacy_policy.php",
  "sha1": "a6b1e740b9aa0508a7966009d8db4aba74f7db2a",
  "simhash": 423942621511996726,
  "simhash_updated": false,
  "site_hostname": "uppfly.com",
  "site_url": "http://uppfly.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131222151336",
  "word_count": 340,
  "year": 2013
}

--- a/u/up/upp/uppfly.com.html
+++ b/u/up/upp/uppfly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uppfly.com privacy policy that was archived on 2013-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130623040213id_/http%3A//www.uppfly.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uppfly.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222151336id_/http%3A//www.uppfly.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -354,8 +354,7 @@ countries.init()
 <!--ad section1 start-->
 <div class="cls"></div>
 <div class="add_bg" align="center">
-<a href="http://www.domain4search.com/" rel="nofollow" target="_blank"><img src="http://www.uppfly.com/images/banner/uppfly_271_271_1.gif" border="0" width="271" height="250"></a>
-</div>
+<a href="http://www.a2zdiet-plan.com/" target="_blank" rel="nofollow"><img src="http://www.uppfly.com/images/smstau-internalbanner.jpg" border="0" width="270"></a></div>
 <!--ad section2 start-->
 
 <!--top stories start-->
@@ -420,14 +419,14 @@ countries.init()
 <li><a href="http://www.uppfly.com/advertising.php">Advertise</a></li>
 <li><a href="http://www.uppfly.com/top-today.html">Top Today</a></li>		
 <li><a href="http://www.uppfly.com">upcoming Story</a></li>
-<li><a href="http://www.lawfirminindia.com" title="Law Firms in India" target="_blank">Law Firms in India</a></li>
+
 
 </ul>		
 
 </div>
 <div class="footer_section2 fl">
 <h4>Our Official Partner</h4>
-<div align="center" class="mrt8"><a href="http://www.articleswrap.com/" target="_blank"><img src="http://www.uppfly.com/images/banner214X60.gif" border="0"></a></div>
+<div align="center" class="mrt8"><a href="http://www.articleswrap.com/" target="_blank" rel="nofollow"><img src="http://www.uppfly.com/images/banner214X60.gif" border="0"></a></div>
 
 </div>
 <div class="footer_section2 fl">
@@ -446,7 +445,7 @@ countries.init()
 </div>-->
 </div>
 <div class="cls"></div>
-<div align="center" class="mrt8 footer_note">© Copyright 2010-2011 A <span><a href="http://www.thinktankinfo.com"><img src="http://www.smstau.com/images/tt_logo.jpg" align="absbottom" border="0">&nbsp;<strong>Think Tank Infotech Pvt Ltd </strong></a> </span> Venture </div>
+<div align="center" class="mrt8 footer_note">© Copyright 2010-2011 A <span><a href="http://www.thinktankinfo.com" rel="nofollow"><img src="http://www.smstau.com/images/tt_logo.jpg" align="absbottom" border="0">&nbsp;<strong>Think Tank Infotech Pvt Ltd </strong></a> </span> Venture </div>
 </div>
 <script type="text/javascript">
 
