wishlistr.com (archived on 2013-12-22)
{
  "alexa_rank": 113779,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 6374,
  "classifier_probability": 0.86,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.62,
  "homepage_snapshot_redirected_domain": "wishlistr.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130925185222id_/http://www.wishlistr.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130925185222id_/http%3A//wishlistr.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "wishlistr.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222181252id_/http%3A//www.wishlistr.com/about/privacy-policy",
  "policy_title": "Wishlistr - Privacy Policy",
  "policy_url": "wishlistr.com/about/privacy-policy",
  "sha1": "48ee8c36a04e1904a387b6fd354221b4bdb42c5d",
  "simhash": 15839410864804434893,
  "simhash_updated": true,
  "site_hostname": "wishlistr.com",
  "site_url": "http://wishlistr.com",
  "smog": 14.12,
  "strict_updated": true,
  "timestamp": "20131222181252",
  "word_count": 1011,
  "year": 2013
}

--- a/w/wi/wis/wishlistr.com.html
+++ b/w/wi/wis/wishlistr.com.html
@@ -1,142 +1,150 @@
-<!--The following is the downloaded HTML source of the wishlistr.com privacy policy that was archived on 2013-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130623033919id_/http%3A//www.wishlistr.com/about/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wishlistr.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222181252id_/http%3A//www.wishlistr.com/about/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
+  <title>Wishlistr - Privacy Policy</title>
 
-<!-- Title, Meta tags & Links -->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta content="all" name="robots">
 
-<title>Wishlistr: Privacy Policy</title>
-
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta content="all" name="robots">
-
-<link rel="shortcut icon" href="/favicon.ico">
-
-<link rel="stylesheet" type="text/css" href="/_lib/css/wishlistr.css">
-
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/_lib/css/wishlistr.css">
 </head>
 
 <body>
 
-
-<div id="header">
-<div class="wrapper">
-	
-<div id="logo"><span><a href="/" title="Go to homepage"><img src="/images/logo.gif" alt="Wishlistr"></a></span></div>
-
-<h2>Let the world know what you desire</h2>
-
-<ul id="loggedout-nav">
-    <li><a href="/">Home</a></li>
-    <li><a href="/login/">Login</a></li>
-    <li><a href="/signup/">Signup</a> <sup>Free!</sup></li>
-</ul>
-
-</div>
-</div>
-
-<div id="pagebar">
-    <div class="wrapper">
-        <h1>About</h1>
+  <div id="header">
+  <div id="top">	
+    <div class="logo"><a href="/"><img src="/images/logo.png" alt="logo" width="108" height="25"></a></div>
+    <div class="title"><h1>Privacy Policy</h1></div>    <div id="nav">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/login/">Login</a></li>
+        <li><a href="/signup/">Signup</a></li>
+      </ul>
     </div>
+  </div>
+</div> <!-- Closes #header -->
+  <div id="toolbar" class="empty"></div>
+
+  <div id="content">
+    <div class="wrapper">
+
+      <div class="side-nav">
+        <ul>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/help/">FAQ</a></li>
+          <li class="active"><a href="/about/privacy-policy/">Privacy Policy</a></li>
+          <li><a href="/about/terms-of-use/">Terms of Use</a></li>
+        </ul>
+      </div>
+
+      <div class="section text">
+
+        <h2>Wishlistr Privacy Policy Statement</h2>
+
+        <p><em>This document was last updated on 2012-05-15.</em></p>
+
+        <h3>1. Acknowledgement and Acceptance of Terms</h3>
+
+        <p>Wishlistr and Digital Venues Sweden HB ("Digital Venues", "us", "our", or "we") is committed to protecting your privacy. This Privacy Statement sets forth our current privacy practices with regard to the information we collect when you or your computer interact with our website. By accessing Wishlistr, http://www.wishlistr.com, you acknowledge and fully understand Digital Venues' Privacy Statement and freely consent to the information collection and use practices described in this Privacy Statement.</p>
+
+        <h3>2. Information We Collect and How We Use It</h3>
+
+        <p>Digital Venues collects certain information from and about Wishlistr users in three ways: from our Web Server logs, directly from the user, and with Cookies.</p>
+
+        <p><strong>a. Personal Information from Users</strong></p>
+
+        <p>Visitors to our website must register in order to use the services. When you register, we will request some personal information such as name and email. Other information including, but not limited to, birthday, location, and web site address is optional.</p>
+        <p>We will not disclose any personally identifiable information we collect from you to third parties without your permission, except to the extent necessary, including:</p>
+
+        <ul class="bullet">
+          <li>To fulfill your requests for service.</li>
+          <li>To protect ourselves from liability,</li>
+          <li>To respond to legal process or comply with law, or</li>
+          <li>In connection with a merger, acquisition, or liquidation of the company.</li>
+        </ul>
+
+        <p>You may also be asked to disclose personal information to us so that we can provide assistance and information to you. For example, such data may be warranted in order to provide online technical support and troubleshooting.</p>
+
+        <p><strong>b. Our Use of Cookies</strong></p>
+
+        <p>Digital Venues, like many other web sites, use cookies to personalize and enhance your user experience on the web site. A cookie is a small text file that is placed on your hard disk by a Web page server. Cookies are uniquely assigned to you, and can only be read by a Web Server in the domain that issued the cookie to you.</p>
+        <p>Our use of cookies may include both session cookies and persistent cookies. A session cookie is used while you are logged in on the Wishlistr web site. Session cookies are, unlike persistent cookies, deleted from your computer once you log out and/or close your web browser. Persistent cookies are, for example, placed on your computer if you use our bookmarklet or "Remember me" feature during login.</p>
+        <p>You have the ability to accept or decline cookies. Most Web browsers automatically accept cookies, but you can usually modify your browser setting to decline cookies. If you reject cookies by changing your browser settings then be aware that this will disable some of the functionality on our Website.</p>
+
+        <p><strong>c. Third Party Cookies.</strong></p>
+
+        <p>Our website may contain affiliate marketing links in both editorial and user generated content. Such affiliate links will usually place a cookie on your computer once clicked. These affiliate partnerships enables us to provide you this service free of cost, and without any advertisement on your wish list.</p>
+        <p>All user generated content, as well as our own editorial content, is not influenced by any advertiser or affiliate partnership, and we use a third party to handle all affiliate partnerships for us. We encourage you to read through their <a href="http://skimlinks.com/privacy-policy">privacy policy</a> for more information on how they use cookies and protect your privacy.</p>
+
+        <p><strong>d. Web Server Logs.</strong></p>
+
+        <p>When you visit our service, we may track information to administer the site and analyze its usage. Information we collect may include, but is not limited to:</p>
+
+        <ul class="bullet">
+          <li>Your Internet protocol address.</li>
+          <li>The kind of browser or computer you use.</li>
+          <li>Number of links you click within the site.</li>
+          <li>Country from which you accessed the site.</li>
+          <li>Date and time of your visit.</li>
+          <li>Web page you linked to our site from.</li>
+          <li>Pages you viewed on the site.</li>
+        </ul>
+
+        <p>Raw server logs are stored on servers for approximately 30 days, while the aggregated reports based on those logs may be stored or saved by us infinitely.</p>
+
+        <h3>3. Participating Merchant Policies</h3>
+
+        <p>Related services and offerings with links from this website, including vendor sites, have their own privacy statements that can be viewed by clicking on the corresponding links within each respective website. Online merchants and others who participate in Digital Venues services are encouraged to participate in industry privacy initiatives and to take a responsible attitude towards consumer privacy. However, since we do not have direct control over the policies or practices of participating merchants and other third parties, we are not responsible for the privacy practices or contents of those sites. We recommend and encourage that you always review the privacy policies of merchants and other third parties before you provide any personal information or complete any transaction with such parties.</p>
+
+        <h3>4. Data Storage</h3>
+
+        <p>Although Digital Venues owns the data storage, databases and all rights to the Wishlistr Service, you retain all rights to your data and we will never sell or share your client data with any third-parties. </p>
+
+        <h3>5. Accessing Web Account Information</h3>
+
+        <p>We will provide you with the means to ensure that personally identifiable information in your web account file is correct and current. You may review this information by contacting us by sending an email to our support attendant privacy@wishlistr.com.</p>
+
+        <h3>6. Changes to this Statement</h3>
+
+        <p>Digital Venues has the discretion to occasionally update this privacy statement. When we do, we will also revise the "updated" date at the top of this Privacy page. We encourage you to periodically review this privacy statement to stay informed about how we are helping to protect the personal information we collect. Your continued use of the service constitutes your agreement to this privacy statement and any updates.</p>
+
+        <h3>6. Contacting Us</h3>
+
+        <p>If you have questions regarding our Privacy Statement, its implementation, failure to adhere to this Privacy Statement and/or our general practices, please contact us at privacy@wishlistr.com or send your comments to:</p>
+
+        <p>Digital Venues Sweden HB<br>
+        Att: Niklas Nordlund<br>
+        Ekedalsgatan 53A<br>
+        SE-414 68 Göteborg<br>
+        Sweden</p>
+
+        <p>Digital Venues will use commercially reasonable efforts to promptly respond and resolve any problem or question.</p>
+      </div>
+
+    </div>
+  </div>
+
+  <div id="footer">
+  <div class="inner-wrap">
+    <p class="logo">
+      <a href="/">
+        <img src="/images/logo-footer.png">
+      </a>
+    </p>
+    <p class="footer-nav"> 
+		  <a href="/about/" class="first">About</a> |
+		  <a href="/help/">FAQ</a> |
+		  <a href="/blog/">Blog</a> |
+		  <a href="/contact/">Contact</a> |
+		  <a href="/about/terms-of-use/">Terms</a> |
+		  <a href="/about/privacy-policy/">Privacy</a>
+    </p> 
+    <p>Copyright © Wishlistr 2005-2013. All rights reserved.</p>
+  </div>
 </div>
-
-
-<!-- Start of main content -->
-
-<div id="content">
-<div id="main-wrapper">
-
-
-<h2 id="first">Wishlistr Privacy Policy Statement</h2>
-
-<p>This document was last updated on 2007-07-24.</p>
-
-<h3>1. Acknowledgement and Acceptance of Terms</h3>
-
-<p>Wishlistr and Digital Venues Sweden HB ("Digital Venues") is committed to protecting your privacy. This Privacy Statement sets forth our current privacy practices with regard to the information we collect when you or your computer interact with our website. By accessing Wishlistr, http://www.wishlistr.com, you acknowledge and fully understand Digital Venues' Privacy Statement and freely consent to the information collection and use practices described in this Privacy Statement.</p>
-
-<h3>2. Participating Merchant Policies</h3>
-
-<p>Related services and offerings with links from this website, including vendor sites, have their own privacy statements that can be viewed by clicking on the corresponding links within each respective website. Online merchants and others who participate in Digital Venues services are encouraged to participate in industry privacy initiatives and to take a responsible attitude towards consumer privacy. However, since we do not have direct control over the policies or practices of participating merchants and other third parties, we are not responsible for the privacy practices or contents of those sites. We recommend and encourage that you always review the privacy policies of merchants and other third parties before you provide any personal information or complete any transaction with such parties.</p>
-
-<h3>3. Information We Collect and How We Use It</h3>
-
-<p>Digital Venues collects certain information from and about Wishlistrs users in three ways: directly from our Web Server logs, the user, and with Cookies.</p>
-
-<p><strong>a. Web Server Logs.</strong></p>
-
-<p>When you visit our service, we may track information to administer the site and analyze its usage. Examples of information we may track include:</p>
-
-<ul class="bullet">
-<li>Your Internet protocol address.</li>
-<li>The kind of browser or computer you use.</li> 
-<li>Number of links you click within the site.</li>
-<li>State or country from which you accessed the site.</li> 
-<li>Date and time of your visit.</li> 
-<li>Web page you linked to our site from.</li>
-<li>Pages you viewed on the site.</li>
-</ul>
-
-<p><strong>b. Use of Cookies</strong></p>
-
-<p>Digital Venues uses cookies to personalize or enhance your user experience. A cookie is a small text file that is placed on your hard disk by a Web page server. Cookies cannot be used to run programs or deliver viruses to your computer. Cookies are uniquely assigned to you, and can only be read by a Web Server in the domain that issued the cookie to you.</p>
-
-<p>One of the primary purposes of cookies is to provide a convenience feature to save you time. For example, if you personalize a web page, or navigate within a site, a cookie helps the site to recall your specific information on subsequent visits. Hence, this simplifies the process of delivering relevant content and eases site navigation by providing and saving your preferences and login information as well as providing personalized functionality.</p>
-
-<p>Digital Venues reserves the right to share aggregated site statistics with partner companies, but does not allow other companies to place cookies on our website unless there is a temporary, overriding customer value.</p>
-
-<p>You have the ability to accept or decline cookies. Most Web browsers automatically accept cookies, but you can usually modify your browser setting to decline cookies. If you reject cookies by changing your browser settings then be aware that this will disable some of the functionality on our Website.</p>
-
-<p><strong>c. Personal Information Users</strong></p>
-
-<p>Visitors to our website must register in order to use the services. When you register, we will request some personal information (i.e. name, email) other information such as birthday and web site address is optional.</p>
-
-<p>We will not disclose personally identifiable information we collect from you to third parties without your permission except to the extent necessary including:</p>
-
-<ul class="bullet">
-<li>To fulfill your service requests for services.</li>
-<li>To protect ourselves from liability,</li>
-<li>To respond to legal process or comply with law, or</li>
-<li>In connection with a merger, acquisition, or liquidation of the company.</li>
-</ul>
-
-<p>You may also be asked to disclose personal information to us so that we can provide assistance and information to you. For example, such data may be warranted in order to provide online technical support and troubleshooting.</p>
-
-<h3>4. Data Storage</h3>
-<p>Although Digital Venues owns the data storage, databases and all rights to the Wishlistr Service, you retain all rights to your data and we will never sell or share your client data with any third-parties. </p>
-
-<h3>5. Accessing Web Account Information</h3>
-<p>We will provide you with the means to ensure that personally identifiable information in your web account file is correct and current. You may review this information by contacting us by sending an email to our support attendant privacy@wishlistr.com.</p>
-
-<h3>6. Changes to this Statement</h3>
-<p>Digital Venues has the discretion to occasionally update this privacy statement. When we do, we will also revise the "updated" date at the top of this Privacy page. We encourage you to periodically review this privacy statement to stay informed about how we are helping to protect the personal information we collect. Your continued use of the service constitutes your agreement to this privacy statement and any updates.</p>
-
-<h3>6. Contacting Us</h3>
-<p>If you have questions regarding our Privacy Statement, its implementation, failure to adhere to this Privacy Statement and/or our general practices, please contact us at privacy@wishlistr.com or send your comments to:</p>
-
-<p>Digital Venues Sweden HB<br>
-Att: Niklas Nordlund<br>
-Ekedalsgatan 53A<br>
-SE-414 68 Göteborg<br>
-Sweden</p>
-
-<p>Digital Venues will use commercially reasonable efforts to promptly respond and resolve any problem or question.</p>
-													
-</div> <!-- Closes #content -->
-</div> <!-- Closes #wrapper -->
-
-
-<div id="footer">
-<div id="wrapper">
-
-<p>Copyright © Wishlistr 2005-2010 | <a href="/about/terms-of-use/">Terms of Use</a> | <a href="/about/privacy-policy/">Privacy Policy</a> | Made by <a href="http://www.digitalvenues.se/">Digital Venues</a>.</p>
-
-</div>
-</div>
-
 
 </body></html>
